--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="hello_world">Hello world!</string>
     
     <string name="type_tip">请徐泽</string>
-
+    <string name="explanation">This is the left aligned gallery. While it is not perfect, you may find it useful as a starting point for your purposes!</string>
 </resources>
